5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/1685/executions/1578_1326.log
== TEST (2019-03-25 11:21:57) 
-- CODE:
x=("Valor da corrida sosigene:")
y=("valor da corrida jocasta:")
total=(x+y)
-- OUTPUT:
***** 
* 0 0 * 
* ^ * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:22:04) 
-- CODE:
x=("Valor da corrida sosigene:")
y=("valor da corrida jocasta:")
total=(x+y)
-- EXECUTION TIME:
0.148052
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:22:24) 
-- CODE:
x=("Valor da corrida sosigene:")
y=("valor da corrida jocasta:")
total=("x+y:")
-- EXECUTION TIME:
0.275325
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:22:27) 
-- CODE:
x=("Valor da corrida sosigene:")
y=("valor da corrida jocasta:")
total=("x+y:")
-- OUTPUT:
***** 
* 0 0 * 
* ^ * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:23:08) 
-- CODE:
x=(Valor da corrida sosigene)
y=(valor da corrida jocasta)
total=(x+y)
-- ERROR:
File "XXXX", line 1
    x=(Valor da corrida sosigene)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:23:24) 
-- CODE:
x=("Valor da corrida sosigene")
y=("valor da corrida jocasta")
total=(x+y)
-- ERROR:
File "XXXX", line 1
    x=(Valor da corrida sosigene)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:23:27) 
-- CODE:
x=("Valor da corrida sosigene")
y=("valor da corrida jocasta")
total=(x+y)
-- EXECUTION TIME:
0.151071
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:23:42) 
-- CODE:
x=float("Valor da corrida sosigene")
y=float("valor da corrida jocasta")
total=(x+y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float("Valor da corrida sosigene")
ValueError: could not convert string to float: 'Valor da corrida sosigene'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:23:42) 
-- CODE:
x=float("Valor da corrida sosigene")
y=float("valor da corrida jocasta")
total=(x+y)
-- EXECUTION TIME:
0.137312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    x=float("Valor da corrida sosigene")
ValueError: could not convert string to float: 'Valor da corrida sosigene'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:02:59) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:03:06) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:04:09) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
z=(x+y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:04:15) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
z=(x+y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:04:24) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
z=(x+y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:05:06) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
z=(x+y)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:05:11) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
z=(x+y)
print(z)
-- EXECUTION TIME:
0.256734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 2, in <module>
    y=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:05:28) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
z=("x+y:")
print(z)
-- EXECUTION TIME:
0.188144
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 2, in <module>
    y=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:05:35) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
z=("x+y:")
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:06:00) 
-- CODE:
x=input("Valor da corrida sosigene:")
y=input("valor da corrida jocas:")
z=("x+y:")
print(z)
-- EXECUTION TIME:
0.193415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 2, in <module>
    y=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:08:08) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x+y
print(total)
-- EXECUTION TIME:
0.192899
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:08:15) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x+y
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:08:35) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x+y
print(total)
-- EXECUTION TIME:
0.181799
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:33:05) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x*y
print(total)
-- EXECUTION TIME:
0.202999
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:33:20) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x+y
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:33:45) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x+y
print("total")
-- EXECUTION TIME:
0.244035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:33:56) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x+y
print(total)
-- EXECUTION TIME:
0.134498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:34:31) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x+y
-- EXECUTION TIME:
0.117653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:34:41) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=x+y
25
-- EXECUTION TIME:
0.133389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1326/main.py", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:51:30) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:"))
total=("x+y")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:52:56) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:")
print=(x+y)
-- ERROR:
File "XXXX", line 3
    print=(x+y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:53:14) 
-- CODE:
x=float(input("valor sosigens:"))
y=float(input("valor jocasta:")
print=("x+y")
-- ERROR:
File "XXXX", line 3
    print=("x+y")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:54:27) 
-- CODE:
x=float("valor total da compra:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float("valor total da compra:")
ValueError: could not convert string to float: 'valor total da compra:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:55:40) 
-- CODE:
x=float("sosigene pagou 40:")
y=float("jocasta pagou 35:")
z=total
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float("sosigene pagou 40:")
ValueError: could not convert string to float: 'sosigene pagou 40:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:55:57) 
-- CODE:
x=float("sosigene pagou 40:")
y=float("jocasta pagou 35:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float("sosigene pagou 40:")
ValueError: could not convert string to float: 'sosigene pagou 40:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:56:01) 
-- CODE:
x=float("sosigene pagou 40:")
y=float("jocasta pagou 35:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float("sosigene pagou 40:")
ValueError: could not convert string to float: 'sosigene pagou 40:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:56:57) 
-- CODE:
print('	valor da compra:')
-- OUTPUT:
valor da compra:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:57:42) 
-- CODE:
print('valor da compra:')
print('75')
-- OUTPUT:
valor da compra:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:57:48) 
-- CODE:
print('valor da compra:')
print('75')
-- OUTPUT:
valor da compra:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:57:50) 
-- CODE:
print('valor da compra:')
print('75')
-- EXECUTION TIME:
0.136051
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
valor da compra:
75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:58:02) 
-- CODE:
print=('valor da compra:')
print=('75')
-- EXECUTION TIME:
0.199277
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:58:07) 
-- CODE:
print=('valor da compra:')
print=('75')
-- OUTPUT:
valor da compra:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:58:12) 
-- CODE:
print=('valor da compra:')
print=('75')
-- OUTPUT:
valor da compra:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:58:38) 
-- CODE:
print=("valor da compra:")
print=('75')
-- OUTPUT:
valor da compra:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
